changing the main architecture
